# sdb

./: CMakeLists.txt  README.md  vcpkg.json
include/libsdb/: error.hpp  libsdb.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  types.hpp
include/libsdb/detail/: registers.inc
src/: CMakeLists.txt  libsdb.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  test.cpp
test/targets/: CMakeLists.txt  end_immediately.cpp  run_endlessly.cpp
tools/: CMakeLists.txt  sdb.cpp
